﻿drkns 03.03.2016 02:14:30 +0200 - build 4568

1. Рефакторинг.

zg 01.03.2016 00:16:46 +0200 - build 4567

1. невозможно при определённых условиях прервать сканирование размера каталога в qview.

drkns 29.02.2016 22:23:24 +0200 - build 4566

1. Уточнение 4565.

drkns 28.02.2016 20:01:24 +0200 - build 4565

1. При детаче консоли (Ctrl+Shift+Tab) скопируем алиасы из старой в новую.

drkns 27.02.2016 18:05:26 +0200 - build 4564

1. Рефакторинг.

2. Немного переименований.

w17 26.02.2016 19:47:29 +0300 - build 4563

1. Experimental: M#2983: Far3, подсчёт размера папки на удалённом компе, глюк с links
   ВСЕ пройденные реальные каталоги пишутся в std::set VisitedDirs.
   Это сделано сознательно. Во-первых так не надо учитывать мнооого тонкостей, во-вторых
   если в ScanTree каталоги можно пропускать то на мой взгляд иначе просто не получится.
   Но желающие естественно всё это могут оптимизировать.

drkns 25.02.2016 18:04:48 +0200 - build 4562

1. 0003187: Symlink на сетевой каталог не работает после редактирования целевого каталога в диалоге атрибутов

svs 24.02.2016 09:40:36 +0300 - build 4561

1. SQLite 3.11.0

drkns 23.02.2016 19:46:47 +0200 - build 4560

1. 0003185: Panel in unsorted mode is showing the first file/folder as the last

drkns 20.02.2016 22:01:11 +0200 - build 4559

1. gcc build fix.

drkns 20.02.2016 21:53:30 +0200 - build 4558

1. Продолжение 4548: обрабатываем все исключения единообразно.

drkns 20.02.2016 15:56:08 +0200 - build 4557

1. Продолжение 4548: показываем более правильный стек на x86, показываем source file/line в стеке и в основном диалоге.

2. В UnquoteExternal() учтём прямой слеш тоже.

w17 20.02.2016 15:03:22 +0300 - build 4556

1. Уточнение 4523. Учтём "D:\Path Name"\ в UnquoteExternal()

drkns 20.02.2016 04:16:03 +0200 - build 4555

1. Продолжение 4548: загружаем pdb только тогда, когда нужно.

drkns 19.02.2016 21:58:30 +0200 - build 4554

1. Уточнение 4552.

2. VC2015 warning.

w17 19.02.2016 22:31:34 +0300 - build 4553
