@@ -1,4 +1,8 @@
-﻿drkns 03.03.2016 02:14:30 +0200 - build 4568
+﻿drkns 03.03.2016 21:29:48 +0200 - build 4569
+
+1. Уточнение 4568.
+
+drkns 03.03.2016 02:14:30 +0200 - build 4568
 
 1. Рефакторинг.
 
